// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchField should render correctly 1`] = `
<div class="md-field md-theme-default"><label for="md-input-zolfdnfyf"></label> <input type="text" id="md-input-zolfdnfyf" class="md-input"> <button type="button" class="md-button md-icon-button md-dense md-theme-default">
    <div class="md-ripple">
      <div class="md-button-content"><i class="md-icon md-icon-font md-theme-default">search</i></div>
    </div>
  </button>
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SearchField should render initial value correctly 1`] = `
<div class="md-field md-theme-default"><label for="md-input-zolfdnfyf"></label> <input type="text" id="md-input-zolfdnfyf" class="md-input"> <button type="button" class="md-button md-icon-button md-dense md-theme-default">
    <div class="md-ripple">
      <div class="md-button-content"><i class="md-icon md-icon-font md-theme-default">search</i></div>
    </div>
  </button>
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`SearchField should render label correctly 1`] = `
<div class="md-field md-theme-default"><label for="md-input-zolfdnfyf">some label</label> <input type="text" id="md-input-zolfdnfyf" class="md-input"> <button type="button" class="md-button md-icon-button md-dense md-theme-default">
    <div class="md-ripple">
      <div class="md-button-content"><i class="md-icon md-icon-font md-theme-default">search</i></div>
    </div>
  </button>
  <!---->
  <!---->
  <!---->
</div>
`;
